Banco de Dados Pronto: As tabelas para Plano, Matérias e Disponibilidade foram criadas e relacionadas.
Lógica de Negócio Completa: O serviço que valida e salva um plano de estudos completo (com suas matérias e horários) está funcional.

API Criada: Existe um endpoint (/api/planejamentos) que recebe os dados do frontend e aciona a lógica de salvamento.

Segurança Implementada: O sistema identifica o usuário logado e associa o plano à sua conta automaticamente.

Tela de Criação Funcional: Uma nova página (criarPlano.html) com um formulário dinâmico de 3 passos foi criada.

Signed-off-by: GuilhermeMoraesTV <20222TADSSAJ0033@ifba.edu.br>